force-app/main/default/objects/OpportunityLineItem/fields/QuotedSalePrice__c.field-meta.xml
<CustomField>
    <fullName>QuotedSalePrice__c</fullName>
    <label>Quoted Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>